# docx2markdown_custom

./: README.md  pyproject.toml  setup.cfg  test_docx2markdown.py
src/docx2markdown_custom/: __init__.py
src/docx2markdown_custom.egg-info/: PKG-INFO  requires.txt
