[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docx2markdown-custom"
version = "1.0.1"
description = "Convert .docx files to Markdown, preserving headings, paragraphs, and tables."
authors = [
    { name = "Sid Mathur", email = "sid.mathur@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "python-docx>=0.8.11"
]

[project.urls]
Homepage = "https://pypi.org/project/docx2markdown-custom/"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["docx2markdown_custom"]

[project.optional-dependencies]
test = ["pytest"]

dynamic = ["classifiers"]