[metadata]
name = docx2markdown_custom
version = 1.0.1
description = Convert .docx files to Markdown, preserving headings, paragraphs, and tables.
author = Sid Mathur
author_email = sid.mathur@gmail.com
license = MIT

[options]
packages = find:
package_dir =
    = src
install_requires =
    python-docx>=0.8.11

[options.packages.find]
where = src